--- a/components/sections/Services/index.scss
+++ b/components/sections/Services/index.scss
@@ -97,6 +97,7 @@
       display: flex;
       flex-direction: column;
       gap: 2rem;
+      margin-bottom: 10rem !important;
     }
 
     &__title-container {
