--- a/components/sections/Stack/index.scss
+++ b/components/sections/Stack/index.scss
@@ -36,7 +36,7 @@
     margin: auto;
 
     &__title {
-      font-size: 1.8rem;
+      font-size: 2rem;
       text-align: center;
     }
 
@@ -68,6 +68,7 @@
       max-width: 100vw !important;
       max-height: unset !important;
       margin: 0 auto !important;
+      margin-bottom: 10rem !important;
     }
   }
 }
